--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <title>New York Times</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
     <div class="container">
+
       <div class="jumbotron">
         <h1 class="text-center"><i class="fa fa-newspaper-o" aria-hidden="true"></i> New York Times <i class="fa fa-newspaper-o" aria-hidden="true"></i></h1>
         <p></p>
       </div>
+
       <div>
         <form>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              Search Parameters
+            </div>
+          </div>
           <div class="form-group">
             <label for="search-term">Search Term:</label>
             <input type="email" class="form-control" id="search-term" placeholder="Search Term">
@@ -48,7 +56,7 @@
       <div id='article-list'>
 
       </div>
-
+      
     </div>
 
   </body>
